# ClientServerApp

./: .gitignore  CMakeLists.txt  README.md  common.h
LinuxClient/: CMakeLists.txt  LinuxClient.cpp  LinuxClient.h
LinuxServer/: CMakeLists.txt  LinuxServer.cpp  LinuxServer.h
client/: CMakeLists.txt  ClientClass.cpp  ClientClass.h  main.cpp
server/: CMakeLists.txt  ClientThread.cpp  ClientThread.h  ServerClass.cpp  ServerClass.h  main.cpp
